@@ -3,6 +3,11 @@
  */
 #include <testfwk.h>
 
+#ifdef __SDCC
+#pragma std_c99
+#pragma disable_warning 85
+#endif
+
 #include <stdint.h>
 #include <stdbool.h>
 
